AC_INIT()

VERSION="0.1.0"
PACKAGE="libcontainer"

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(src/config.h)

AC_CANONICAL_HOST

LIBCONTAINER_LT_VERSION="0:1:0"
AC_SUBST(LIBCONTAINER_LT_VERSION)

dnl checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl checks for headers
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

CFLAGS="-Wall -Wstrict-prototypes $CFLAGS"

AC_MSG_CHECKING([whether to include verbose debugging code])
AC_ARG_ENABLE(debug,
  [  --enable-debug          include verbose debugging code [default=no]],
  if test x$enableval = "xyes"; then
    AC_MSG_RESULT([yes])
    AC_DEFINE([DEBUG], [1], [Defined to 1 for debugging support])
    CONFIGOPTS="$CONFIGOPTS --enable-debug"
  else
    AC_MSG_RESULT([no])
    CONFIGOPTS="$CONFIGOPTS --disable-debug"
  fi,
  AC_MSG_RESULT([no])
  CONFIGOPTS="$CONFIGOPTS --disable-debug"
)

AC_OUTPUT([
	src/Makefile
	tests/Makefile
	Makefile
])
